[package]
name = "squad_rcon"
version = "0.1.0"
authors = ["endeavor <endeavor@rainbowsandpwnies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
clap = "2.33"
lazy_static = "1.4"
log = "0.4"
regex = "1.0"
serde = {version="1.0", features=["derive"]}
simplelog = "0.7"

[lib]
name = "squad_rcon"
path = "lib/lib.rs"

[[bin]]
name = "squad-rcon"
path = "src/main.rs"